# iCub_superbuild

./: CMakeLists.txt
cmake/modules/: SuperBuild.cmake  SuperBuildOptions.cmake  iCubSuperBuild.cmake
patches/TinyXML/: 0001-Add-CMake-stuff.patch  CMakeLists.txt  TinyXMLConfig.cmake.in
